# discard

./: .gitignore  1net.yaml  2local.yaml  2remote.yaml  4local.yaml  7net.yaml  ChangeLog.md  LICENSE  README.md  card-systems.cabal  discard.cabal  example-expnet.yaml  example-network.yaml  expr1.sh  run-experiment  setup-servers  shell.nix
cardr/: Main.hs
demo/: Bank.hs  Interface.hs  Main.hs
experiment-client/: Client.hs
experiment-server/: Server.hs
expr-client/: Client.hs
expr-server/: Server.hs  Warehouse.hs
lib/: CARD.hs  ConflictAware.hs  Replica.hs
lib/CARD/: ConflictAware.hs  ConflictFree.hs  CvRDT.hs  EventGraph.hs  Experiment.hs  LQ.hs  Lamport.hs  Locks.hs  Network.hs  Node.hs  Operation.hs  Prelude.hs  RateControl.hs  RepCard.hs  RepCore.hs  Replica.hs  STM.hs  Store.hs
lib/CARD/EventGraph/: Internal.hs  Ipfs.hs  Ipfs2.hs  SetEG.hs
lib/CARD/LQ/: Bank.hs  Internal.hs
lib/CARD/Network/: STM.hs
lib/CARD/Store/: Bank.hs  CA.hs
lib/Data/: CARD.hs  CvRDT.hs  EdgeSet.hs  Effect.hs  EventGraph.hs  LamportClock.hs  LogStore.hs
lib/Data/CARD/: Camo.hs  Capconf.hs  Classes.hs  Const.hs  Counter.hs  Effect.hs  InfSet.hs  Locks.hs  Map.hs  Maybe.hs  Res.hs  Store.hs
lib/Data/CvRDT/: Broadcast.hs  Replica.hs
lib/Data/Effect/: Common.hs
lib/Data/EventGraph/: Internal.hs  Ipfs.hs  SetEG.hs
lib/Lang/: CCRT.hs  Carol.hs
lib/Lang/CCRT/: Escrow.hs  Token.hs
lib/Lang/Carol/: Bank.hs  Internal.hs  Warehouse.hs
lib/Language/Carol/: Bank.hs  Internal.hs
lib/Network/: Discard.hs
lib/Network/Discard/: Broadcast.hs  Crypto.hs  Experiment.hs  Experiment2.hs  HTTP.hs  Node.hs  RateControl.hs  RepCard.hs
lib/Storage/Ipfs/: Http.hs  Turtle.hs  Types.hs
tests/: tests.hs
