name:                card-systems
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     CARD
                     , CARD.Prelude
                     , CARD.EventGraph.SetEG
                     , CARD.STM
                     , CARD.EventGraph.Ipfs
                     , CARD.EventGraph.Ipfs2
  other-modules:       CARD.EventGraph
                     , CARD.Network
                     , CARD.Operation
                     , CARD.Store
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , mtl
                     , stm
                     , lens
                     , turtle
                     , foldl
                     , text
                     , yaml
                     , aeson
                     , process
                     , directory
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable cardr
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , card-systems
                     , mtl
                     , stm
                     , time
  hs-source-dirs:      cardr
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , card-systems
