name:                card-systems
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     CARD
                     , CARD.EventGraph.Internal
                     , CARD.EventGraph.SetEG
                     , CARD.EventGraph.Ipfs
                     , CARD.LQ.Bank
                     , CARD.Locks
                     , CARD.CvRDT
                     , CARD.RepCore
                     , Storage.Ipfs.Types
                     , Storage.Ipfs.Turtle
                     , Storage.Ipfs.Http
  other-modules:       CARD.EventGraph
                     , CARD.Network
                     , CARD.Store
                     , CARD.LQ
                     , CARD.RepCard
  build-depends:       base >=4.10 && <4.13
                     , containers
                     , mtl
                     , stm
                     , lens
                     , turtle
                     , foldl
                     , text
                     , yaml
                     , aeson
                     , process
                     , directory
                     , http-client
                     , wai
                     , warp
                     , http-types
                     , free
                     , parsec
                     , text
                     , bytestring
                     , filepath
                     , random
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable cardr
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.13
                     , card-systems
                     , mtl
                     , stm
                     , http-client
                     , containers
                     , yaml
                     , optparse-applicative
                     , random
                     , time
  hs-source-dirs:      cardr
  default-language:    Haskell2010

  -- This bit is required for turtle sub-processes to not hang
  -- sometimes?
  ghc-options:       -threaded
