name:                discard
version:             0.2.0
license:             BSD3
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.EventGraph
                     , Data.EventGraph.Internal
                     , Data.EventGraph.SetEG
                     , Data.EventGraph.Ipfs
                     , Data.CARD
                     , Data.CARD.Locks
                     , Data.CARD.Store
                     , Data.CvRDT
                     , Data.LogStore
                     , Data.LamportClock
                     , Lang.Carol
                     , Lang.Carol.Internal
                     , Lang.Carol.Bank
                     , Network.Discard
                     , Network.Discard.Experiment
                     , Storage.Ipfs.Types
                     , Storage.Ipfs.Turtle
                     , Storage.Ipfs.Http

  other-modules:       Network.Discard.Node
                     , Network.Discard.Broadcast
                     , Network.Discard.Crypto
                     , Network.Discard.HTTP
                     , Network.Discard.RateControl
                     , Network.Discard.RepCard

  build-depends:       base >=4.10 && <4.13
                     , containers
                     , mtl
                     , stm
                     , lens
                     , turtle
                     , foldl
                     , text
                     , yaml
                     , aeson
                     , process
                     , directory
                     , http-client
                     , wai
                     , warp
                     , http-types
                     , free
                     , parsec
                     , text
                     , bytestring
                     , filepath
                     , random
                     , time
                     , saltine
                     , base16-bytestring
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable discard-demo
  main-is:             Main.hs
  other-modules:        Interface
  build-depends:       base >=4.10 && <4.13
                     , discard
                     , mtl
                     , stm
                     , http-client
                     , containers
                     , yaml
                     , optparse-applicative
                     , random
                     , time
                     , directory
                     , brick >=0.47 && <0.48
                     , microlens-platform
                     , text
                     , vty
                     , warp
  hs-source-dirs:      demo
  default-language:    Haskell2010

  -- This bit is required for turtle sub-processes to not hang
  -- sometimes?
  ghc-options:       -threaded
