name:                discard
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.EventGraph
                     , Data.EventGraph.Internal
                     , Data.EventGraph.SetEG
                     , Data.EventGraph.Ipfs
                     , Data.CARD
                     , Data.CARD.Classes
                     , Data.CARD.Const
                     , Data.CARD.Counter
                     , Data.CARD.Map
                     , Data.CARD.Maybe
                     -- , Data.CARD.Locks
                     -- , Data.CARD.Res
                     -- , Data.CARD.Store
                     -- , Data.CvRDT
                     -- , Data.LamportClock
                     -- , Lang.Carol
                     -- , Lang.Carol.Internal
                     -- , Lang.Carol.Bank
                     -- , Lang.Carol.Warehouse
                     -- , Network.Discard
                     -- , Network.Discard.Experiment
                     -- , Network.Discard.Experiment2
                     -- , Storage.Ipfs.Types
                     -- , Storage.Ipfs.Turtle
                     -- , Storage.Ipfs.Http

  -- other-modules:       Network.Discard.Node
  --                    , Network.Discard.Broadcast
  --                    , Network.Discard.RateControl
  --                    , Network.Discard.RepCard

  build-depends:       base >=4.10 && <4.15
                     , containers
                     , mtl
                     , stm
                     , lens
                     , microlens
                     , microlens-th
                     , turtle
                     , foldl
                     , text
                     , yaml
                     , aeson
                     , process
                     , directory
                     , http-client
                     , wai
                     , warp
                     , http-types
                     , free
                     , parsec
                     , text
                     , bytestring
                     , filepath
                     , random
                     , time
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable discard-demo
  main-is:             Main.hs
  other-modules:        Interface
  build-depends:       base >=4.10 && <4.15
                     , discard
                     , mtl
                     , stm
                     , http-client
                     , containers
                     , yaml
                     , optparse-applicative
                     , random
                     , time
                     , directory
                     , brick >=0.47 && <0.63
                     , microlens-platform
                     , text
                     , vty
  hs-source-dirs:      demo
  default-language:    Haskell2010

  -- This bit is required for turtle sub-processes to not hang
  -- sometimes?
  ghc-options:       -threaded

executable discard-experiment-server
  main-is:             Server.hs
  build-depends:       base >=4.10 && <4.15
                     , discard
                     , mtl
                     , stm
                     , containers
                     , yaml
                     , optparse-applicative
                     , random
                     , time
                     , text
                     , aeson
                     , bytestring

                     , wai
                     , warp
                     , http-types

  hs-source-dirs:      expr-server
  default-language:    Haskell2010
  ghc-options:       -threaded


executable discard-experiment-client
  main-is:             Client.hs
  build-depends:       base >=4.10 && <4.15
                     , discard
                     , mtl
                     , stm
                     , containers
                     , yaml
                     , optparse-applicative
                     , random
                     , time
                     , text
                     , aeson
                     , bytestring

                     , http-client
                     , http-types

  hs-source-dirs:      expr-client
  default-language:    Haskell2010
  ghc-options:       -threaded
